<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="@id/arriba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/Registro"
        android:text="@string/txtReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/izquierda"
        app:layout_constraintTop_toTopOf="@id/arriba"
        app:layout_constraintEnd_toStartOf="@id/derecha"
        />
    <TextView
        android:id="@+id/Nombre"
        android:text="@string/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/izquierda"
        app:layout_constraintTop_toTopOf="@id/segunda"
        />
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/izquierda"
        app:layout_constraintTop_toBottomOf="@+id/Nombre"/>
    <TextView
        android:id="@+id/Apellido"
        android:text="@string/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/izquierda"
        app:layout_constraintTop_toTopOf="@id/tercera"
        />
    <EditText
        android:id="@+id/etApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/izquierda"
        app:layout_constraintTop_toBottomOf="@+id/Apellido"/>
    <Button
        android:id="@+id/btnAlta"
        android:text="@string/btAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/izquierda"
        app:layout_constraintTop_toTopOf="@id/cuarta"
        />
    <Button
        android:id="@+id/btnListado"
        android:text="@string/btLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/izquierda"
        app:layout_constraintTop_toBottomOf="@id/btnAlta"
        />
    <Button
        android:id="@+id/btnReset"
        android:text="@string/btRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/izquierda"
        app:layout_constraintTop_toBottomOf="@id/btnListado"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/arriba"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/derecha"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/abajo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/izquierda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/segunda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tercera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cuarta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59"
        />

</androidx.constraintlayout.widget.ConstraintLayout>